<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">IPGateway</string>
    <string name="action_about">About</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="global_access">Global Access</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Let Me In</string>
    <string name="logout">Logout</string>
    <string name="logout_all">Disconnect All</string>
    <string name="title">Login to IPGateway of PKU</string>
    <string name="welcome">Welcome!</string>

    <string name="no_connection">No connection!</string>
    <string name="logging_in" tools:ignore="TypographyEllipsis">Logging in...</string>
    <string name="please_input">Please input username and password!</string>
    <string name="something_wrong">Something wrong! Sorry.</string>
    <string name="no_data">No data returned!</string>
    <string name="tip_title">Tips</string>
    <string name="reach_max_connection">You have reached the max connection number. Disconnect all others and reconnect on this client?你已经达到最大连接数。是否断开其他连接并在此终端上重新连接？</string>
    <string name="no_information">No information returned!</string>
    <string name="no_login">No Successful Login!</string>
    <string name="logging_out" tools:ignore="TypographyEllipsis">Logging out...</string>
    <string name="logging_out_all" tools:ignore="TypographyEllipsis">Closing all...</string>
    
    <string name="about_ipgateway">About IPGateway</string>
    <string name="about_message">IPGateway is a little app for logging to the IP gateway of Peking University. For more information, visit http://www.shengbin.me/apps/ipgateway</string>
    
    <string name="egg">Egg #1</string>
    <string name="egg_message">Dedicated to Cuicui, my love.</string>
    <string name="well">Well</string>
    <string name="bless">Bless</string>
        
    
    

</resources>